--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/orbite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Orbite</title>
   </head>
-  <body>
+  <body class="bg-slate-200 font-sans text-base leading-5 font-normal">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
