Initialize Navbar for page navigation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-mode="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/orbite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orbite</title>
   </head>
-  <body class="bg-slate-200 font-sans text-base leading-5 font-normal">
+  <body class="bg-slate-200 font-sans text-base leading-5 font-normal dark:bg-neutral-900 dark:text-slate-200 transition ease-in-out">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
