--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" data-mode="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/orbite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/orbite-blue.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orbite</title>
   </head>
-  <body class="bg-slate-200 font-sans text-base leading-5 font-normal dark:bg-[rgb(26,26,26)] dark:text-slate-200 transition ease-in-out overflow-hidden">
+  <body class="bg-slate-200 font-sans text-base leading-5 font-normal  dark:bg-slate-800 dark:text-slate-200 transition ease-in-out overflow-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
