--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orbite</title>
   </head>
-  <body class="bg-slate-200 font-sans text-base leading-5 font-normal  dark:bg-slate-800 dark:text-slate-200 transition ease-in-out overflow-x-hidden">
+  <body class="bg-slate-200 font-sans text-base leading-5 font-normal  dark:bg-slate-800 text-slate-800 dark:text-slate-200 transition ease-in-out overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
