--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/orbite-blue.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
     <title>Orbite</title>
   </head>
   <body class="bg-slate-200 font-sans text-base leading-5 font-normal  dark:bg-slate-800 text-slate-800 dark:text-slate-200 transition ease-in-out overflow-x-hidden">
