--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body class="bg-slate-200 font-sans text-base leading-5 font-normal  dark:bg-slate-800 text-slate-800 dark:text-slate-200 transition ease-in-out overflow-x-hidden">
     <div id="root"></div>
+    <div id="toast"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
